Update guidelines to read and write operations

--- a/app/templates/components/form/table/query-table.hbs
+++ b/app/templates/components/form/table/query-table.hbs
@@ -1,21 +1,6 @@
 <section class="table-ref">
   <div class="section-title">Table Reference</div>
-  <table class="key-value-table">
-    <tbody>
-    <tr>
-      <td class="key">Primary Key</td>
-      <td class="value">
-        <code class="comma-list">[{{#each table.partitionKey as |key|}}<span class="item">{{key}}</span>{{/each}}]</code>
-      </td>
-    </tr>
-    <tr>
-      <td class="key">Table Fields</td>
-      <td class="value">
-        <code class="comma-list">[{{#each-in table.fields as |key prop|}}<span class="item">{{key}}({{prop.type}})</span>{{/each-in}}]</code>
-      </td>
-    </tr>
-    </tbody>
-  </table>
+  {{table.ts-table-reference table=table}}
 </section>
 
 <section class="query-module">
