Create alert component and remove ember-bootstrap dependency. Not being used, massive lib

--- a/app/templates/alerts/error-request-was-not-processed.hbs
+++ b/app/templates/alerts/error-request-was-not-processed.hbs
@@ -1,5 +1,5 @@
-{{#bs-alert type="danger"}}
+{{#alert-component type="danger"}}
   <h4><span class="label label-danger">ERROR</span></h4>
   Sorry but your request was not processed correctly. If the problem persists,
   try submitting an issue to the <a href="https://github.com/basho-labs/riak_explorer" target="_blank">Explorer Github Repo</a>.
-{{/bs-alert}}
+{{/alert-component}}
