--- a/app/templates/alerts/error-set-items-unique.hbs
+++ b/app/templates/alerts/error-set-items-unique.hbs
@@ -1,4 +1,4 @@
-{{#bs-alert type="danger"}}
+{{#alert-component type="danger"}}
   <h4><span class="label label-danger">ERROR</span></h4>
   Set items must be <strong>unique</strong> binary values.
-{{/bs-alert}}
+{{/alert-component}}
