--- a/app/templates/alerts/feedback-welcome.hbs
+++ b/app/templates/alerts/feedback-welcome.hbs
@@ -1,8 +1,8 @@
-{{#bs-alert type="info" dismissible=false}}
+{{#alert-component type="info" dismissible=false}}
   <h4>Feedback or suggestions welcome!</h4>
   <p>
     If you have any questions or pain points using Riak Explorer,
     please open up an <a href="https://github.com/basho-labs/riak_explorer/issues" target="_blank">issue on Github</a>.
   </p>
-{{/bs-alert}}
+{{/alert-component}}
 
