--- a/app/templates/alerts/error-invalid-xml.hbs
+++ b/app/templates/alerts/error-invalid-xml.hbs
@@ -1,4 +1,4 @@
-{{#bs-alert type="danger" dismissible=false}}
+{{#alert-component type="danger" dismissible=false}}
   <h4><span class="label label-danger">ERROR</span></h4>
   Invalid XML. Please check and make sure schema is valid xml.
-{{/bs-alert}}
+{{/alert-component}}
