--- a/app/templates/alerts/error-schema-not-saved.hbs
+++ b/app/templates/alerts/error-schema-not-saved.hbs
@@ -1,5 +1,5 @@
-{{#bs-alert type="danger" dismissible=false}}
+{{#alert-component type="danger" dismissible=false}}
   <h4><span class="label label-danger">ERROR</span></h4>
   Something went wrong, schema was not saved.
-{{/bs-alert}}
+{{/alert-component}}
 
