Side drawer component

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -33,6 +33,7 @@
 @import "components/object-content-list";
 @import "components/pagination-component";
 @import "components/riak-object-styling";
+@import "components/side-drawer";
 @import "components/table";
 @import "components/tooltip";
 @import "components/view-label";
