--- a/app/styles/components/_alerts.scss
+++ b/app/styles/components/_alerts.scss
@@ -4,6 +4,8 @@
     padding-left: 40px;
     padding-right: 20px;
     margin-bottom: 0;
+    border-left: none;
+    border-right: none;
 
     &:last-of-type {
       margin-bottom: 20px;
