--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,7 @@
 {{loading-slider isLoading=loading}}
 
+
+
 <div class="app-panel">
   {{render 'partials.topbar'}}
   <div class="wrapper-panel">
@@ -68,5 +70,6 @@
         {{outlet}}
       </div>
     </div>
+    <div id="side-drawer-container"></div>
   </div>
 </div>
