--- a/app/styles/components/_side-drawer.scss
+++ b/app/styles/components/_side-drawer.scss
@@ -1,6 +1,7 @@
 #side-drawer-container {
   @include flex(none);
   border-left: 1px solid $grayscale-color-x-light;
+  overflow: scroll;
 
   &.drawer-closed {
     border-left: none;
@@ -9,6 +10,7 @@
   .side-drawer {
     width: 400px;
     background: #FFF;
+    overflow: scroll;
 
     &.open {
       display: block;
@@ -39,6 +41,20 @@
 
     .drawer-body {
       padding: 20px;
+
+      p {
+        margin-bottom: 20px;
+      }
+
+      pre {
+        margin-bottom: 20px;
+      }
+
+      ul {
+        margin-left: 20px;
+        margin-bottom: 20px;
+        list-style: disc;
+      }
     }
 
     @media only screen and (min-device-width: 769px) and (max-width: 1175px) {
