Table query visual update and reworked flow

--- a/app/styles/components/_dashboard-module.scss
+++ b/app/styles/components/_dashboard-module.scss
@@ -12,6 +12,10 @@
     max-width: 800px;
   }
 
+  &.large-width {
+    max-width: 1000px;
+  }
+
   &.no-border {
     border: none;
     background: none;
