--- a/app/styles/utils/_bootstrap-overrides.scss
+++ b/app/styles/utils/_bootstrap-overrides.scss
@@ -1,10 +1,27 @@
 .btn-primary {
-  background-color: $branding-color-2;
-  border-color: $branding-color-2;
+  background-color: darken($branding-color-2, 5%);
+  border-color: darken($branding-color-2, 5%);
 
   &:hover, &:active, &:focus, &:active:focus {
-    background-color: darken($branding-color-2, 5%);
-    border-color: darken($branding-color-2, 5%);
+    background-color: darken($branding-color-2, 10%);
+    border-color: darken($branding-color-2, 10%);
+  }
+
+  &:disabled, &:disabled:hover {
+    background-color: lighten($branding-color-2, 3%);
+    border-color: lighten($branding-color-2, 3%);
+  }
+}
+
+.btn-info {
+  background-color: lighten($branding-color-1, 48%);
+  color: darken($branding-color-1, 2%);
+  border-color: $branding-color-1;
+
+  &:hover, &:active, &:focus, &:active:focus, &:active:hover {
+    background-color: lighten($branding-color-1, 40%);
+    color: darken($branding-color-1, 10%);
+    border-color: darken($branding-color-1, 5%);
   }
 }
 
