Updated Schema create to follow app conventions and UI

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -40,4 +40,5 @@
 @import "views/bucket-type";
 @import "views/cluster";
 @import "views/riak-object";
+@import "views/search-schema";
 @import "views/table";
