--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -30,6 +30,7 @@
 @import "components/loading-spinner";
 @import "components/map-section";
 @import "components/object-content-list";
+@import "components/paginated_table";
 @import "components/pagination-component";
 @import "components/riak-object-styling";
 @import "components/side-drawer";
