Switch table "fields" to be table "columns", align with what is used in basho docs

--- a/app/styles/views/_table.scss
+++ b/app/styles/views/_table.scss
@@ -17,6 +17,12 @@
   }
 }
 
+.ts-table-reference {
+  .key {
+    min-width: 125px;
+  }
+}
+
 .table-create-container {
   //.table-name {
   //  width: 354px;
