Table Write improved error reporting

--- a/app/templates/partials/ts-table-write-guidelines.hbs
+++ b/app/templates/partials/ts-table-write-guidelines.hbs
@@ -7,7 +7,7 @@
 <h4>Table Write Editor</h4>
 <ul>
   <li>Each row you wish to insert should be represented as an array of column values, separated by a comma</li>
-  <li>Row column values must be in the same order as defined in the table. Refer to the table columns in the above table
+  <li>Row column values must be in the same order as defined in the table. Refer to the table columns in the table
     reference for order.
   </li>
 </ul>
