--- a/app/templates/partials/ts-table-write-guidelines.hbs
+++ b/app/templates/partials/ts-table-write-guidelines.hbs
@@ -10,6 +10,7 @@
   <li>Row column values must be in the same order as defined in the table. Refer to the table columns in the table
     reference for order.
   </li>
+  <li>If a table column is optional, and you do not wish to pass a value for that write instance, use <code>null</code> as the array value.</li>
 </ul>
 
 <h4>General Guidelines</h4>
