--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -31,6 +31,7 @@
 @import "components/loading-slider";
 @import "components/loading-spinner";
 @import "components/map-section";
+@import "components/modal";
 @import "components/object-content-list";
 @import "components/paginated_table";
 @import "components/pagination-component";
