Update table rows to be displayed in a table, organized by column

--- a/app/styles/components/_key-value-table.scss
+++ b/app/styles/components/_key-value-table.scss
@@ -12,6 +12,16 @@
   .table-in-kv-table {
     thead th {
       padding-top: 0;
+
+      &:first-child {
+        padding-left: 0;
+      }
+    }
+
+    tbody td {
+      &:first-child {
+        padding-left: 0;
+      }
     }
 
     li {
