--- a/app/templates/components/table/table-overview.hbs
+++ b/app/templates/components/table/table-overview.hbs
@@ -28,10 +28,10 @@
   </td>
 </tr>
 
-<tr class="table-in-kv-table">
+<tr>
   <td class='key'>Columns</td>
   <td class='value'>
-    <table class="table">
+    <table class="table-in-kv-table table">
       <thead>
       <tr>
         <th>Name</th>
