--- a/app/templates/components/table/table-rows.hbs
+++ b/app/templates/components/table/table-rows.hbs
@@ -29,7 +29,7 @@
             </tr>
             </thead>
             <tbody>
-            {{#each table.rows as |row|}}
+            {{#each table.rowsSortedByQuantumValues as |row|}}
                 <tr>
                   {{#each row.parsedValue as |value|}}
                       <td><code>{{value}}</code></td>
