Update pagination styling and functionality

--- a/app/styles/components/_pagination-component.scss
+++ b/app/styles/components/_pagination-component.scss
@@ -4,6 +4,7 @@
       @extend .btn;
       @extend .btn-xs;
       @extend .btn-default;
+      margin-bottom: 5px;
 
       &.selected {
         @extend .btn-primary;
