Removed conditional classes for paginated components, was throwing deprecation errors

--- a/app/styles/components/_table.scss
+++ b/app/styles/components/_table.scss
@@ -1,4 +1,18 @@
 .table {
+  thead th {
+    padding-top: 0;
+
+    &:first-child {
+      padding-left: 0;
+    }
+  }
+
+  tbody td {
+    &:first-child {
+      padding-left: 0;
+    }
+  }
+
   &.cluster-table {
     .object-type {
       min-width: 125px;
