--- a/app/templates/components/table/table-overview.hbs
+++ b/app/templates/components/table/table-overview.hbs
@@ -31,7 +31,7 @@
 <tr>
   <td class='key'>Columns</td>
   <td class='value'>
-    <table class="table-in-kv-table table">
+    <table class="table">
       <thead>
       <tr>
         <th>Name</th>
