Boilerplate for bucket create view

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -40,6 +40,7 @@
 @import "components/tooltip";
 @import "components/view-label";
 // View specific styling
+@import "views/bucket";
 @import "views/bucket-type";
 @import "views/cluster";
 @import "views/riak-object";
