Basic bucket and Riak Object create functionalty

--- a/app/templates/components/form/explorer-button.hbs
+++ b/app/templates/components/form/explorer-button.hbs
@@ -1,3 +1,3 @@
-<button class="btn btn-{{type}}" {{action onButtonClick}}>
+<button class="btn btn-{{type}}" {{action 'handleButtonClick'}}>
   {{label}}
 </button>
