More robust validations and code pulled out into helpers

--- a/app/templates/components/alert/error-alert.hbs
+++ b/app/templates/components/alert/error-alert.hbs
@@ -3,7 +3,7 @@
     <h4><span class="label label-danger">Errors</span></h4>
     <ul>
       {{#each errors as |error|}}
-        <li>{{error}}</li>
+        <li>{{{error}}}</li>
       {{/each}}
     </ul>
   {{/alert.base-alert}}
