--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,17 +4,18 @@
   {{render 'partials.topbar'}}
   <div class="wrapper-panel">
     <div class="sidebar-panel">
-      {{#power-select
-      class='cluster-selector'
-      searchEnabled=false
-      selected=currentCluster
-      placeholder='Select Cluster'
-      options=model
-      onchange=(action 'clusterSelected')
-      as |cluster|}}
-        <span class="ion-ios-keypad" aria-hidden="true"></span>
-        {{cluster.name}}
-      {{/power-select}}
+      <div class="ember-power-select cluster-selector">
+        {{#power-select
+        searchEnabled=false
+        selected=currentCluster
+        placeholder='Select Cluster'
+        options=model
+        onchange=(action 'clusterSelected')
+        as |cluster|}}
+          <span class="ion-ios-keypad" aria-hidden="true"></span>
+          {{cluster.name}}
+        {{/power-select}}
+      </div>
 
       {{#if currentCluster}}
         <div class="current-cluster">
