Update serializers to parse new Table DDL format

--- a/app/templates/components/table/table-overview.hbs
+++ b/app/templates/components/table/table-overview.hbs
@@ -24,7 +24,7 @@
 <tr>
   <td class='key'>Local Key</td>
   <td class='value'>
-    <code class="comma-list">[{{#each table.localKey as |key|}}<span class="item">{{key}}</span>{{/each}}]</code>
+    <code class="comma-list">[{{#each table.localKey as |key|}}<span class="item">{{key.name}}</span>{{/each}}]</code>
   </td>
 </tr>
 
